Made the past activites container width fixed, left container is now the only one that stretches upon resize, fixed right-margin on the past-cards to be in-line with the new-card margin

--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,8 @@ h3 {
 }
 
 .past-card {
-  width: 100%;
+  max-width: 20rem;
+  margin-right: .3rem;
   color: var(--white);
   flex-direction: column;
   padding-left: .5rem;
